--- a/src/templates/geophysical/geophysical.html
+++ b/src/templates/geophysical/geophysical.html
@@ -1,17 +1,18 @@
-<!-- The CreateGeophysicalModal -->
-<div class="modal" id="CreateGeophysicalModal">
+<!-- The Combined GeophysicalModal Modal -->
+<div class="modal fade" id="GeophysicalModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
     
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">გეოფიზიკური კვლევის დამატება</h4>
+                <h4 class="modal-title" id="GeophysicalModalTitle"></h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
     
             <!-- Modal body -->
             <div class="modal-body">
-                <form class="row mt-2" id="addGeophysicalForm" enctype="multipart/form-data" onsubmit="createGeophysicalForm(event)">
+                <form class="row mt-2" id="GeophysicalForm" enctype="multipart/form-data">
+                    <input type="hidden" id="geophysicalId" name="id">
                     <div class="mb-3">
                         <label for="vs30" class="form-label"><span class="text-danger me-1">*</span>გასაშუალებული VS30:</label>
                         <input type="number" class="form-control" id="vs30" name="vs30" required>
@@ -25,12 +26,12 @@
                         <input type="text" class="form-control" id="groundCategoryEuro" name="ground_category_euro" required>
                     </div>
                     <div class="mb-3">
-                        <label for="archivalMaterial" class="form-label">საარქივო ფაილი:</label>
+                        <label for="archivalMaterial" class="form-label">საარქივო ფაილი (PDF):</label>
                         <input type="file" class="form-control" id="archivalMaterial" name="archival_material" accept=".pdf">
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
-                        <button type="submit" class="btn btn-primary me-2">კვლევის დამატება</button>
+                        <button type="submit" class="btn btn-primary me-2" id="submitGeophysicalBtn"></button>
                     </div>
                 </form>
             </div>
