--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -7,13 +7,13 @@
         </button>
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">IesData</h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">GNSMC</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
                     <li class="nav-item">
-                        {{ create_navlink('projects.projects', 'Home') }}
+                        {{ create_navlink('projects.projects', 'მთავარი') }}
                     </li>
                 </ul>
             </div>
