--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,7 +17,7 @@
 <body>
     {% include "navbar.html" %}
     <section style="background-color: #eee; overflow-y: auto; font-size: small; height: 94vh;">
-        <div class="container">
+        <div class="container h-100">
             {% block body %}
             {% endblock %}
         </div>
