--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    IesData - Projects
+    IesProjects - Projects
 {% endblock %}
 
 {% block body %}
