--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    IesData - View Project
+    IesProjects - View Project
 {% endblock %}
 
 {% block body %}
