--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- google map -->
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&callback=initMap" async></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/auth/globalAccessControl.js') }}" defer></script>
 </head>
 
 <body>
