Add jwt_required and check_permission

--- a/src/templates/projects/edit_project.html
+++ b/src/templates/projects/edit_project.html
@@ -13,7 +13,7 @@
     
             <!-- Modal body -->
             <div class="modal-body">
-                <form class="row mt-2" id="editProjectForm">
+                <form class="row mt-2" id="editProjectForm" enctype="multipart/form-data">
                     <!-- Form Fields -->
                     <input type="hidden" id="editProjectId" name="project_id">
                     <div class="mb-2">
