--- a/src/templates/projects/edit_project.html
+++ b/src/templates/projects/edit_project.html
@@ -1,9 +1,7 @@
 <!-- The Modal -->
-<div class="modal fade" id="editProjectModal" tabindex="-1" role="dialog" aria-labelledby="editProjectModalLabel" aria-hidden="true">
+<div class="modal fade" id="editProjectModal" tabindex="-1"  aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <!-- Placeholder for Bootstrap alerts -->
-            <div id="alertPlaceholder" class="container mt-1"></div>
 
             <!-- Modal Header -->
             <div class="modal-header">
@@ -13,44 +11,43 @@
     
             <!-- Modal body -->
             <div class="modal-body">
-                <form class="row mt-2" id="editProjectForm" enctype="multipart/form-data">
+                <form class="row mt-2" id="editProjectForm" data-project-id="" enctype="multipart/form-data" onsubmit="submitProjectForm(event)">
                     <!-- Form Fields -->
-                    <input type="hidden" id="editProjectId" name="project_id">
                     <div class="mb-2">
-                        <label for="projectName"><span class="text-danger me-1">*</span>პროექტის სახელი:</label>
+                        <label for="editProjectName"><span class="text-danger me-1">*</span>პროექტის სახელი:</label>
                         <input type="text" class="form-control mt-2" id="editProjectName" name="projects_name" required>
                     </div>
                     <div class="mb-2">
-                        <label for="contractNumber">ხელშეკრულების ნომერი:</label>
+                        <label for="editContractNumber">ხელშეკრულების ნომერი:</label>
                         <input type="text" class="form-control mt-2" id="editContractNumber" name="contract_number">
                     </div>
                     <div class="col">
-                        <label for="startTime"><span class="text-danger me-1">*</span>დაწყების დღე:</label>
+                        <label for="editStartTime"><span class="text-danger me-1">*</span>დაწყების დღე:</label>
                         <input type="date" class="form-control mt-2" id="editStartTime" name="start_time" required>
                     </div>
                     <div class="col mb-2">
-                        <label for="endTime"><span class="text-danger me-1">*</span>დასრულების დღე:</label>
+                        <label for="editEndTime"><span class="text-danger me-1">*</span>დასრულების დღე:</label>
                         <input type="date" class="form-control mt-2" id="editEndTime" name="end_time" required>
                     </div>
                     <div class="mb-2">
-                        <label for="contractor">დამკვეთი:</label>
+                        <label for="editContractor">დამკვეთი:</label>
                         <input type="text" class="form-control mt-2" id="editContractor" name="contractor">
                     </div>
                     <div class="col">
-                        <label for="projLatitude"><span class="text-danger me-1">*</span>განედი:</label>
+                        <label for="editProjLatitude"><span class="text-danger me-1">*</span>განედი:</label>
                         <input type="number" step="any" class="form-control mt-2" id="editProjLatitude" name="proj_latitude" required>
                     </div>
                     <div class="col mb-3">
-                        <label for="projLongitude"><span class="text-danger me-1">*</span>გრძედი:</label>
+                        <label for="editProjLongitude"><span class="text-danger me-1">*</span>გრძედი:</label>
                         <input type="number" step="any" class="form-control mt-2" id="editProjLongitude" name="proj_longitude" required>
                     </div>
                     <div class="mb-3">
-                        <label for="projLocation"><span class="text-danger me-1">*</span>პროექტის მდებარეობა:</label>
+                        <label for="editProjLocation"><span class="text-danger me-1">*</span>პროექტის მდებარეობა:</label>
                         <input type="text" class="form-control mt-2" id="editProjLocation" name="proj_location" required>
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
-                        <button type="submit" class="btn btn-primary me-2" onclick="editProjectForm()">რედაქტირება</button>
+                        <button type="submit" class="btn btn-primary me-2">რედაქტირება</button>
                     </div>
                 </form>
             </div>
