--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -12,6 +12,9 @@
             class="img-fluid" alt="Sample image">
     </div>
     <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <div class="text-center mb-5">
+            <h2>ავტორიზაცია</h2>
+        </div>
         <form id="loginForm">
             <!-- Email input -->
             <div class="form-outline mb-4">
@@ -42,7 +45,7 @@
             <div class="text-center text-lg-start mt-4 pt-2">
                 <button type="submit" class="btn btn-primary"
                         style="padding-left: 2.5rem; padding-right: 2.5rem;">შესვლა</button>
-                <p class="fw-bold mt-2 pt-1 mb-0">არ გაქვს ანგარიში? <a href="#"
+                <p class="fw-bold mt-2 pt-1 mb-0">არ გაქვს ანგარიში? <a href="/registration"
                     class="link-danger">რეგისტრაცია</a></p>
             </div>
         </form>
