--- a/src/templates/auth/registration.html
+++ b/src/templates/auth/registration.html
@@ -12,6 +12,9 @@
             class="img-fluid" alt="Sample image">
     </div>
     <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <div class="text-center mb-5">
+            <h2>რეგისტრაცია</h2>
+        </div>
         <form id="registrationForm">
             <!-- Name input -->
             <div class="form-outline mb-4">
