--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/layout/navbar.js') }}" defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/auth/user.js') }}" defer></script>
 <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: 3.5rem;">
     <div class="container-lg">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -21,3 +22,5 @@
     </div>
 </nav>
 
+<!-- The UserModal -->
+{% include "user.html" %}
