--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,6 +18,7 @@
 <body>
     {% include "navbar.html" %}
     <section style="background-color: #eee; overflow-y: auto; font-size: small; height: 94vh;">
+        <div id="alertPlaceholder"></div>
         <div class="container h-100">
             {% block body %}
             {% endblock %}
