add showalert in geophysical page

--- a/src/templates/geophysical/geophysical.html
+++ b/src/templates/geophysical/geophysical.html
@@ -1,3 +1,22 @@
+<!-- Confirmation Modal -->
+<div class="modal fade" id="confirmDeleteGeophysicalModal" tabindex="-1" aria-labelledby="confirmDeleteGeophysicalModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteGeophysicalModalLabel">დადასტურება</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ნამდვილად გსურთ ამ გეოფიზიკის წაშლა?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">გაუქმება</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteGeophysicalButton">წაშლა</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- The Combined GeophysicalModal Modal -->
 <div class="modal fade" id="GeophysicalModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
