--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -7,24 +7,26 @@
 {% block body %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/projects/projects.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/projects/map.js') }}" defer></script>
+
     <!-- Confirmation Modal -->
-    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal fade" id="confirmDeleteProjectModal" tabindex="-1" aria-labelledby="confirmDeleteProjectModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="confirmDeleteModalLabel">დადასტურება</h5>
+                    <h5 class="modal-title" id="confirmDeleteProjectModalLabel">დადასტურება</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    გსურთ ამ პროექტის წაშლა?
+                    ნამდვილად გსურთ ამ პროექტის წაშლა?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">გაუქმება</button>
-                    <button type="button" class="btn btn-danger" id="confirmDeleteButton">წაშლა</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteProjectButton">წაშლა</button>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="filterMapDiv">
         {% include "filter_project.html" %}
 
