--- a/src/templates/geophysical/geophysical.html
+++ b/src/templates/geophysical/geophysical.html
@@ -7,7 +7,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ნამდვილად გსურთ ამ გეოფიზიკის წაშლა?
+                ნამდვილად გსურთ გეოფიზიკის ჩანაწერის წაშლა?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-light" data-bs-dismiss="modal">გაუქმება</button>
