add showalert on view geophysical page

--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -142,7 +142,8 @@
                     <th>ელექტრული პროფილები</th>
                     <th>ელექტრული წერტილების რაოდენობა</th>
                     <th>გეორადარი</th>
-                    <th>საარქივო ფაილი</th>
+                    <th>საარქივო Excel</th>
+                    <th>საარქივო PDF</th>
                     <th></th>
                     <th></th>
                     <th></th>
