--- a/src/templates/geophysical/geophysical.html
+++ b/src/templates/geophysical/geophysical.html
@@ -45,8 +45,12 @@
                         <input type="text" class="form-control" id="groundCategoryEuro" name="ground_category_euro" required>
                     </div>
                     <div class="mb-3">
-                        <label for="archivalMaterial" class="form-label">საარქივო ფაილი (PDF):</label>
-                        <input type="file" class="form-control" id="archivalMaterial" name="archival_material" accept=".pdf">
+                        <label for="geophysic_archival_excel" class="form-label">საარქივო Excel:</label>
+                        <input type="file" class="form-control" id="geophysic_archival_excel" name="archival_excel" accept=".xls, .xlsx">
+                    </div>
+                    <div class="mb-3">
+                        <label for="geophysic_archival_pdf" class="form-label">საარქივო PDF:</label>
+                        <input type="file" class="form-control" id="geophysic_archival_pdf" name="archival_pdf" accept=".pdf">
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
