--- a/src/templates/auth/user.html
+++ b/src/templates/auth/user.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="col">
                         <label for="user_lastname" class="form-label"><span class="text-danger me-1">*</span>მომხმარებლის გვარი:</label>
-                        <input type="text" step="any" class="form-control" id="user_lastname" name="lastname" required>
+                        <input type="text" step="any" class="form-control" id="user_lastname" name="lastname" autocomplete="username" required>
                     </div>
 
                     <!-- Change Password Checkbox -->
@@ -39,13 +39,13 @@
                     <!-- Password Fields -->
                     <div class="mb-3" id="passwordFields" style="display: none;">
                         <label for="user_old_password" class="form-label"><span class="text-danger me-1">*</span>არსებული პაროლი:</label>
-                        <input type="password" class="form-control" id="user_old_password" name="old_password">
+                        <input type="password" class="form-control" id="user_old_password" name="old_password" autocomplete="current-password">
                     </div>
                     <div class="mb-3" id="newPasswordFields" style="display: none;">
                         <label for="user_new_password" class="form-label"><span class="text-danger me-1">*</span>ახალი პაროლი:</label>
-                        <input type="password" class="form-control" id="user_new_password" name="new_password">
+                        <input type="password" class="form-control" id="user_new_password" name="new_password" autocomplete="new-password">
                         <label for="user_repeat_new_password" class="form-label"><span class="text-danger me-1">*</span>გაიმეორეთ ახალი პაროლი:</label>
-                        <input type="password" class="form-control" id="user_repeat_new_password" name="repeat_new_password">
+                        <input type="password" class="form-control" id="user_repeat_new_password" name="repeat_new_password" autocomplete="new-password">
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
