add showalert on view geophysical page

--- a/src/templates/auth/registration.html
+++ b/src/templates/auth/registration.html
@@ -41,14 +41,14 @@
             <div class="form-outline mb-3">
                 <label class="form-label" for="password">პაროლი:</label>
                 <input type="password" id="password" name="password" class="form-control form-control-lg"
-                    placeholder="პაროლი" required />
+                    placeholder="პაროლი" required autocomplete="password"/>
             </div>
 
             <!-- Repeat Password input -->
             <div class="form-outline mb-3">
                 <label class="form-label" for="passwordRepeat">გაიმეორეთ პაროლი:</label>
                 <input type="password" id="passwordRepeat" name="passwordRepeat" class="form-control form-control-lg"
-                    placeholder="გაიმეორეთ პაროლი" required />
+                    placeholder="გაიმეორეთ პაროლი" required autocomplete="passwordRepeat"/>
             </div>
 
             <!-- Submit button -->
