--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -20,14 +20,14 @@
             <div class="form-outline mb-4">
                 <label class="form-label" for="email">ელ.ფოსტის მისამართი</label>
                 <input type="email" id="email" name="email" class="form-control form-control-lg"
-                    placeholder="შეიყვანეთ ელ.ფოსტის მისამართი" required />
+                    placeholder="შეიყვანეთ ელ.ფოსტის მისამართი" required/>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-3">
                 <label class="form-label" for="password">პაროლი</label>
                 <input type="password" id="password" name="password" class="form-control form-control-lg"
-                    placeholder="შეიყვანეთ პაროლი" required />
+                    placeholder="შეიყვანეთ პაროლი" required autocomplete="password"/>
             </div>
 
             <!-- Remember me and Forgot password -->
