--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -27,6 +27,19 @@
     height: 27.5rem;
     
 }
+.spinner-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    background-color: rgba(100, 100, 100, 0.7);
+    width: 100%;
+    height: 100%;
+}
 @media (max-width: 992px) {
     .filterMapDiv {
         flex-direction: column-reverse;
