--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -71,7 +71,13 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>          
-
+    </div>
+    <!-- Spinner HTML -->
+    <div id="uploadingSpinner" class="spinner-container" style="display: none;">
+        <div class="row fs-5 spinner-border text-light" role="status">
+            <span class="visually-hidden">Uploading ...</span>
+        </div>
+        <span class="row fs-6 text-light m-3">Uploading ...</span>
     </div>
 
     <div class="table-responsive-xxl table-bordered text-center mt-2" style="font-size: small;">
