add filter functions

--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -7,6 +7,7 @@
 {% block body %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/projects/projects.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/projects/map.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/projects/filter_project.js') }}" defer></script>
 
     <!-- Confirmation Modal -->
     <div class="modal fade" id="confirmDeleteProjectModal" tabindex="-1" aria-labelledby="confirmDeleteProjectModalLabel" aria-hidden="true">
