--- a/src/templates/projects/filter_project.html
+++ b/src/templates/projects/filter_project.html
@@ -1,49 +1,49 @@
 <div class="card mt-1 filterDiv">
-    <form method="POST">
+    <form id="filterProjectForm" enctype="multipart/form-data" onsubmit="filterProjectForm(event)">
         <table class="table table-borderless mt-2">
             <tbody>
                 <tr>
                     <td class="text-center pt-3">ადგილმდებარეობა:</td>
                     <td>
-                        <label class="form-label" for="form1">
-                            <input type="text" id="form1" class="form-control form-control-sm" placeholder="Location"/>
+                        <label class="form-label" for="filterProjLocation">
+                            <input type="text" id="filterProjLocation" class="form-control form-control-sm" name="proj_location" placeholder="Location"/>
                         </label>
                     </td>
                 </tr>
                 <tr>
                     <td class="text-center pt-3">ხელშეკრულების ნომერი:</td>
                     <td>
-                        <label class="form-label" for="form12">
-                            <input type="text" id="form12" class="form-control form-control-sm" placeholder="Number"/>
+                        <label class="form-label" for="filterContractNumber">
+                            <input type="text" id="filterContractNumber" class="form-control form-control-sm" name="contract_number" placeholder="Number"/>
                         </label>
                     </td>
                 </tr>
                 <tr>
                     <td class="text-center pt-3">VS30 Range:</td>
                     <td>
-                        <label class="form-label" for="formVS30">
-                            <input type="text" id="vs30RangeMin" class="form-control form-control-sm col" placeholder="Min Value" />
-                            <input type="text" id="vs30RangeMax" class="form-control form-control-sm col" placeholder="Max Value" />
+                        <label class="form-label" for="filterVS30">
+                            <input type="text" id="vs30Min" class="form-control form-control-sm col" name="vs30_min" placeholder="Min Value" />
+                            <input type="text" id="vs30Max" class="form-control form-control-sm col" name="vs30_max" placeholder="Max Value" />
                         </label>
                     </td>
                 </tr>
                 <tr class="text-center">
                     <td>Select PGA:</td>
                     <td class="text-start fs-6">
-                        <label class="form-check-label me-1" for="CheckSuccess">
-                            <input class="form-check-input" type="checkbox" value="" id="CheckSuccess" />
+                        <label class="form-check-label me-1" for="checkPGA2">
+                            <input class="form-check-input" type="checkbox" value="2" id="checkPGA2" name="pga"/>
                             2%
                         </label>
-                        <label class="form-check-label me-1" for="CheckPrimary">
-                            <input class="form-check-input" type="checkbox" value="" id="CheckPrimary" />
+                        <label class="form-check-label me-1" for="checkPGA5">
+                            <input class="form-check-input" type="checkbox" value="5" id="checkPGA5" name="pga"/>
                             5%
                         </label>
-                        <label class="form-check-label me-1" for="CheckInfo">
-                            <input class="form-check-input" type="checkbox" value="" id="CheckInfo" />
+                        <label class="form-check-label me-1" for="checkPGA10">
+                            <input class="form-check-input" type="checkbox" value="10" id="checkPGA10" name="pga"/>
                             10%
                         </label>
-                        <label class="form-check-label me-1" for="CheckDanger">
-                            <input class="form-check-input" type="checkbox" value="" id="CheckDanger" />
+                        <label class="form-check-label me-1" for="checkPGA20">
+                            <input class="form-check-input" type="checkbox" value="20" id="checkPGA20" name="pga"/>
                             20%
                         </label>
                     </td>
@@ -51,22 +51,22 @@
                 <tr>
                     <td class="text-center pt-3">თარიღი (დან):</td>
                     <td>
-                        <label class="form-label" for="form12">
-                            <input type="date" class="form-control form-control-sm" id="startTime" name="start_time" required>
+                        <label class="form-label" for="filterStartTime">
+                            <input type="date" class="form-control form-control-sm" id="filterStartTime" name="start_time">
                         </label>
                     </td>
                 </tr>
                 <tr>
                     <td class="text-center pt-3">თარიღი (მდე):</td>
                     <td>
-                        <label class="form-label" for="form12">
-                            <input type="date" class="form-control form-control-sm" id="endTime" name="end_time" required>
+                        <label class="form-label" for="filterEndTime">
+                            <input type="date" class="form-control form-control-sm" id="filterEndTime" name="end_time">
                         </label>
                     </td>
                 </tr>
                 <tr>
-                    <td class="text-end"><a class="btn btn-sm btn-primary" href="#">გაფილტვრა</a></td>
-                    <td><a class="btn btn-sm btn-primary" href="#">გასუფთავება</a></td>
+                    <td class="text-end"><button type="submit" class="btn btn-sm btn-primary">გაფილტვრა</button></td>
+                    <td><button type="reset" class="btn btn-sm btn-secondary">გასუფთავება</button></td>
                 </tr>
             </tbody>
         </table>
