--- a/src/templates/auth/user.html
+++ b/src/templates/auth/user.html
@@ -6,6 +6,9 @@
             <!-- Modal Header -->
             <div class="modal-header">
                 <h4 class="modal-title">მონაცემების განახლება</h4>
+                <button type="button" class="btn btn-primary me-3 ms-3" id="accountsButton" style="display: none;" onclick="redirectToAccounts()">
+                    Accounts
+                </button>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
     
