--- a/src/templates/geophysical/geophysicElectrical.html
+++ b/src/templates/geophysical/geophysicElectrical.html
@@ -34,12 +34,12 @@
                 <form class="row mt-2" id="GeophysicElectricalForm" enctype="multipart/form-data">
                     <input type="hidden" id="geophysicElectricalId" name="id">
                     <div class="col">
-                        <label for="electrical_longitude" class="form-label"><span class="text-danger me-1">*</span>განედი (x):</label>
-                        <input type="number" step="any" class="form-control" id="electrical_longitude" name="longitude" required>
+                        <label for="electrical_latitude" class="form-label"><span class="text-danger me-1">*</span>განედი (y):</label>
+                        <input type="number" step="any" class="form-control" id="electrical_latitude" name="latitude" required>
                     </div>
                     <div class="col">
-                        <label for="electrical_latitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (y):</label>
-                        <input type="number" step="any" class="form-control" id="electrical_latitude" name="latitude" required>
+                        <label for="electrical_longitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (x):</label>
+                        <input type="number" step="any" class="form-control" id="electrical_longitude" name="longitude" required>
                     </div>
                     <div class="mb-3">
                         <label for="electrical_profile_length" class="form-label"><span class="text-danger me-1">*</span>პროფილის სიგრძე:</label>
