--- a/src/templates/geophysical/geophysicGeoradar.html
+++ b/src/templates/geophysical/geophysicGeoradar.html
@@ -33,12 +33,12 @@
                 <form class="row mt-2" id="GeophysicGeoradarForm" enctype="multipart/form-data">
                     <input type="hidden" id="geophysicGeoradarId" name="id">
                     <div class="col">
-                        <label for="georadar_longitude" class="form-label"><span class="text-danger me-1">*</span>განედი (x):</label>
-                        <input type="number" step="any" class="form-control" id="georadar_longitude" name="longitude" required>
+                        <label for="georadar_latitude" class="form-label"><span class="text-danger me-1">*</span>განედი (y):</label>
+                        <input type="number" step="any" class="form-control" id="georadar_latitude" name="latitude" required>
                     </div>
                     <div class="col">
-                        <label for="georadar_latitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (y):</label>
-                        <input type="number" step="any" class="form-control" id="georadar_latitude" name="latitude" required>
+                        <label for="georadar_longitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (x):</label>
+                        <input type="number" step="any" class="form-control" id="georadar_longitude" name="longitude" required>
                     </div>
                     <div class="mb-3">
                         <label for="georadar_profile_length" class="form-label"><span class="text-danger me-1">*</span>პროფილის სიგრძე:</label>
