--- a/src/templates/geophysical/geophysicLogging.html
+++ b/src/templates/geophysical/geophysicLogging.html
@@ -33,12 +33,12 @@
                 <form class="row mt-2" id="GeophysicLoggingForm" enctype="multipart/form-data">
                     <input type="hidden" id="geophysicLoggingId" name="id">
                     <div class="col">
-                        <label for="logging_longitude" class="form-label"><span class="text-danger me-1">*</span>განედი (x):</label>
-                        <input type="number" step="any" class="form-control" id="logging_longitude" name="longitude" required>
+                        <label for="logging_latitude" class="form-label"><span class="text-danger me-1">*</span>განედი (y):</label>
+                        <input type="number" step="any" class="form-control" id="logging_latitude" name="latitude" required>
                     </div>
                     <div class="col">
-                        <label for="logging_latitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (y):</label>
-                        <input type="number" step="any" class="form-control" id="logging_latitude" name="latitude" required>
+                        <label for="logging_longitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (x):</label>
+                        <input type="number" step="any" class="form-control" id="logging_longitude" name="longitude" required>
                     </div>
                     <div class="mb-3">
                         <label for="logging_profile_length" class="form-label"><span class="text-danger me-1">*</span>პროფილის სიგრძე:</label>
