--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -16,7 +16,7 @@
         {% include "filter_geophysical.html" %}
 
         <div id="geophysic_mapDiv" class="card mt-2">
-            <div id="map" 
+            <div id="geophyMap" 
                 style="width: 100%; height:100%; border: 1px solid #CCC; border-radius: 5px; margin-top:0px;">
             </div>
         </div>
@@ -56,8 +56,10 @@
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-warning">
                 <tr>
-                    <th>განედი (x)</th>
-                    <th>გრძედი (y)</th>
+                    <th>პირველი განედი(y)</th>
+                    <th>პირველი გრძედი(x)</th>
+                    <th>მეორე განედი (y)</th>
+                    <th>მეორე გრძედი (x)</th>
                     <th>პროფილის სიგრძე</th>
                     <th>VS30</th>
                     <th>გრუნტის კატეგორია (Geo):</th>
@@ -80,8 +82,8 @@
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-success">
                 <tr>
-                    <th>განედი (x)</th>
-                    <th>გრძედი (y)</th>
+                    <th>განედი (y)</th>
+                    <th>გრძედი (x)</th>
                     <th>პროფილის სიგრძე</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
@@ -102,8 +104,8 @@
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-primary">
                 <tr>
-                    <th>განედი (x)</th>
-                    <th>გრძედი (y)</th>
+                    <th>განედი (y)</th>
+                    <th>გრძედი (x)</th>
                     <th>პროფილის სიგრძე</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
@@ -123,8 +125,8 @@
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-secondary">
                 <tr>
-                    <th>განედი (x)</th>
-                    <th>გრძედი (y)</th>
+                    <th>განედი (y)</th>
+                    <th>გრძედი (x)</th>
                     <th>პროფილის სიგრძე</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
